@@ -1,0 +1,1 @@
+usr/share/grub/themes/starfield
